apps/controlador/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: controlador
  labels:
    app: controlador
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: controlador
